--- a/signuppage.html
+++ b/signuppage.html
@@ -29,16 +29,14 @@
         box-shadow: 0 2px 10px rgb(0, 0, 0); 
         margin-left: 500px;
         margin-right: auto;
-        /* Add the glowing border effect */
-        border: 2px solid transparent; /* Add a transparent border as a base */
+        /* Add the glowing border effect 
+        border: 2px solid transparent; 
         box-shadow:
                     0 0 40px rgb(0, 0, 0);
                     
-        animation: glowEffect 4s linear infinite; /* Animation */
+        animation: glowEffect 4s linear infinite;
     }
    
-
-    /* Define the glow effect using keyframes */
     @keyframes glowEffect {
         
         100% {
